--- a/app/src/main/res/layout/card_done.xml
+++ b/app/src/main/res/layout/card_done.xml
@@ -3,7 +3,10 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/done_task_frame"
     android:layout_height="85dp"
+    android:clickable="true"
+    android:contextClickable="true"
     android:layout_marginRight="8dp"
     android:layout_marginTop="8dp"
     android:layout_marginLeft="8dp"
@@ -19,12 +22,14 @@
         android:textColor="@color/light"
         android:textSize="20sp"/>
 
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+    <ImageButton
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:id="@+id/check_done"
         android:layout_gravity="center_vertical|right"
-        android:src="@drawable/ic_check"
-        android:layout_marginRight="20dp"/>
+        android:layout_marginRight="0dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_check" />
 
 
 </FrameLayout>
