--- a/app/src/main/res/layout/card_task.xml
+++ b/app/src/main/res/layout/card_task.xml
@@ -11,7 +11,7 @@
     android:clickable="true"
     android:background="@drawable/ic_task_bg"
     android:backgroundTint="@color/light"
-    >
+    android:focusable="true">
     <FrameLayout
         android:layout_marginLeft="8dp"
         android:layout_width="match_parent"
@@ -86,14 +86,26 @@
                 android:src="@drawable/ic_add_time"
                 android:visibility="gone"/>
         </LinearLayout>
-        <ImageButton
-            android:id="@+id/forward"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="28dp"
-            android:layout_marginRight="8dp"
             android:layout_gravity="right"
-            android:src="@drawable/ic_forward"
-            />
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="28dp"
+                android:id="@+id/task_view"
+                android:layout_marginRight="8dp"
+                android:src="@drawable/ic_iconmonstr_pencil_8" />
+            <ImageButton
+                android:id="@+id/forward"
+                android:layout_width="wrap_content"
+                android:layout_height="28dp"
+                android:layout_marginRight="8dp"
+                android:src="@drawable/ic_forward"
+                />
+        </LinearLayout>
     </FrameLayout>
 
 </LinearLayout>
