--- a/app/src/main/res/layout/task_view_dialog.xml
+++ b/app/src/main/res/layout/task_view_dialog.xml
@@ -22,6 +22,7 @@
 
 
         <EditText
+            android:id="@+id/addTaskM"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="number"
@@ -35,6 +36,7 @@
             android:textStyle="bold"
             android:text=" \\ "/>
         <EditText
+            android:id="@+id/addTaskD"
             android:layout_width="wrap_content"
             android:inputType="number"
             android:hint="08"
@@ -49,6 +51,7 @@
             android:text=" - "/>
 
         <EditText
+            android:id="@+id/addTaskTimeH"
             android:layout_width="wrap_content"
             android:inputType="number"
             android:hint="00"
@@ -62,6 +65,7 @@
             android:textStyle="bold"
             android:text=" : "/>
         <EditText
+            android:id="@+id/addTaskTimeM"
             android:layout_width="wrap_content"
             android:inputType="number"
             android:hint="00"
